Fixed picture alignment with CSS on show page

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -59,7 +59,7 @@ a {
 
 #show_left_column {
 	float: left;
-	max-width: 570px;
+	max-width: 700px;
 }
 
 #show_right_column {
